# llm-tools-sandboxed-shell

./: CLAUDE.md  README.md  llm_tools_sandboxed_shell.py  pyproject.toml
tests/: test_tools_sandboxed_shell.py
