[project]
name = "llm-tools-sandboxed-shell"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = "Frank Ully"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-tools-sandboxed-shell"
Changelog = "https://github.com/c0ffee0wl/llm-tools-sandboxed-shell/releases"
Issues = "https://github.com/c0ffee0wl/llm-tools-sandboxed-shell/issues"
CI = "https://github.com/c0ffee0wl/llm-tools-sandboxed-shell/actions"

[project.entry-points.llm]
tools_sandboxed_shell = "llm_tools_sandboxed_shell"

[project.optional-dependencies]
test = ["pytest"]
